--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="gray">#D3D3D3</color>
     <color name="dark_gray">#777777</color>
     <color name="light_gray">#BBBBBB</color>
+    <color name="transparent">#00000000</color>
+
 </resources>
